[package]
name = "cmu-db-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bench]]
name = "bench"
harness = false


[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
criterion = "0.5.1"
dashmap = "6.1.0"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
tempdir = "0.3.7"
tempfile = "3.13.0"
thiserror = "1.0.64"
